[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "when_birthday"
version = "1.0"
authors = [
  { name="Oleg Demydenko", email="officedenko@gmail.com" },
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/olegdenko/HW07/tree/olegdenko/clean_folder"
"Bug Tracker" = "https://github.com/olegdenko/HW07/issues"